--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,6 +16,7 @@
   
 body {
 	padding-top: var(--navbar-height); /* Deja espacio para el navbar fijo */
+	width: 100vw;
 }
 
 /*/////////////////////////////////////////////////////////////////////////*/
@@ -102,6 +103,7 @@ body {
 .collapse {
 	justify-content: end;
 	margin-right: 2rem;
+	width: 100vw;
 	background-color: white;
 }
 .nav-link {
